# looper

./: .gitignore  .gitmodules  README.md  SKILL.md  pyproject.toml
assets/templates/: contract.md  evals.example.jsonl  feature_list.json  log.md  progress.md  references.md  restart-brief.md
references/: fitness-and-convergence.md  manifold-and-roles.md  roles-and-restart.md  state-and-intake.md
references/prompts/: evaluator.md  generator.md  planner.md
scripts/: fitness.py  test_fitness.py
